# prototype_flask_streaming

./: .dockerignore  .gitignore  Dockerfile  Package_management.md  README.md  about.md  app.py  build_image.sh  directory-structure.md  docker-compose.yml  genesis.py  genesis_runner.py  log.json  pyproject.toml  requirements.txt
configs/: config.yml  config2.yaml
docs/: Package_management.md  Web-app.md
output/: sample.csv
src/: app.py  genesis.py  main.py
src/app/: app.py  configs_registry.py
src/app/routes/: __init__.py  config_editing.py  config_handler.py  runner.py
src/app/static/css/: style.css
src/app/static/js/: close_window.js  modal.js  runner copy.js  runner.js
src/app/templates/: _modal_config_delete.html  base.html  error.html  index.html  runner.html
src/app_genesis/: app.py  browser.py  configs_registry.py  genesis_runner.py  secure_path.py
src/app_genesis/routes/: __init__.py  browser.py  config_editing.py  genesis_runner.py  runner.py
src/app_genesis/static/: edit_csv.js  main.js  style.css
src/app_genesis/templates/: _modal.html  base.html  browser.html  config_edit.html  config_new.html  edit.html  edit_csv.html  edit_sql.html  file_editor.html  index.html  run.html  runner.html  view_json.html
src/app_test/: app.py  genesis_runner.py
src/app_test/templates/: base.html  index.html  output.html
src/config/: genesis.py  morningstar.py
src/logtools/: color_formatter.py  log_config.py  log_manager.py
src/templates/: index.html
static/: main.js
templates/: about.html  base.html  index.html  run.html
(+15 files in other folders)
