[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.13.0"
authors = [
    { name = "Mark Zwart", email = "mark.zwart@pobox.com" },
]
readme = "README.md"

dependencies = [
    "ansi2html>=1.9.2",
    "flask>=3.1.2",
    "markdown>=3.10",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["uv_build"]  # UV's build backend dependency
build-backend = "uv_build"

